--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@ beautifulsoup4==4.8.2
 celery==5.2.2
 celery-redbeat==2.0.0
 boto3==1.16.63
+bleach~=5.0.1
 dj-database-url==0.5.0
 django-anymail[mailgun]==8.4
 django
