--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ beautifulsoup4==4.8.2
     #   wagtail
 billiard==3.6.4.0
     # via celery
+bleach==5.0.1
+    # via -r requirements.in
 boto3==1.16.63
     # via -r requirements.in
 botocore==1.19.63
@@ -391,6 +393,7 @@ sentry-sdk==1.4.2
     # via -r requirements.in
 six==1.16.0
     # via
+    #   bleach
     #   click-repl
     #   cybersource-rest-client-python
     #   django-compat
@@ -463,7 +466,9 @@ wagtail==2.15.2
 wcwidth==0.2.5
     # via prompt-toolkit
 webencodings==0.5.1
-    # via html5lib
+    # via
+    #   bleach
+    #   html5lib
 willow==1.4
     # via wagtail
 wrapt==1.12.1
