--- a/app.json
+++ b/app.json
@@ -171,6 +171,10 @@
       "description": "E-mail to use for reply-to address of emails",
       "required": false
     },
+    "MITOL_GOOGLE_SHEETS_ADMIN_EMAILS": {
+      "description": "This list of email addresses for the google service account authentication",
+      "required": false
+    },
     "MITOL_GOOGLE_SHEETS_DATE_FORMAT": {
       "description": "Python strptime format for date columns (no time) in enrollment management spreadsheets",
       "required": false
