--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -117,6 +117,7 @@
     "videojs-youtube": "2.6.1",
     "waait": "1.0.5",
     "webpack": "5.71.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-bundle-tracker": "1.4.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-middleware": "5.3.1",
