--- a/requirements.in
+++ b/requirements.in
@@ -25,7 +25,7 @@ drf-extensions==0.7.1
 django-reversion==4.0.1
 django-storages==1.11.1
 djoser==2.1.0
-git+https://github.com/mitodl/edx-api-client@4d86e512532d17f15f5f79307b6c254e65c3e409#egg=edx-api-client
+edx-api-client==1.5.0
 ipython
 mitol-django-common~=2.5.2
 mitol-django-mail~=3.2.0
