--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -16,6 +16,7 @@
     "@types/react": "17.0.44",
     "@types/react-dom": "17.0.15",
     "craco-less": "2.0.0",
+    "dayjs": "^1.11.7",
     "eslint-config-react": "1.1.7",
     "oidc-client-ts": "2.0.3",
     "react": "17.0.2",
