--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
     "@craco/craco": "6.4.3",
     "@pankod/refine-antd": "3.22.1",
     "@pankod/refine-core": "3.22.1",
