--- a/requirements.txt
+++ b/requirements.txt
@@ -316,7 +316,7 @@ prompt-toolkit==3.0.18
     # via
     #   click-repl
     #   ipython
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
     # via -r requirements.in
 ptyprocess==0.7.0
     # via pexpect
