--- a/requirements.in
+++ b/requirements.in
@@ -27,16 +27,16 @@ django-reversion==4.0.1
 django-storages==1.11.1
 djoser==2.1.0
 edx-api-client==1.6.0
-hubspot-api-client==6.0.0
+hubspot-api-client==6.1.0
 ipython
-mitol-django-common~=2.6.0
-mitol-django-hubspot-api==1.0.0
-mitol-django-mail~=3.2.1
-mitol-django-authentication~=1.5.1
-mitol-django-openedx~=1.2.0
-mitol-django-payment-gateway~=1.7.2
-mitol-django-google-sheets~=2.5.1
-mitol-django-google-sheets-refunds~=0.7.0
+mitol-django-common~=2.7.0
+mitol-django-hubspot-api~=1.1.0
+mitol-django-mail>=3.3.0
+mitol-django-authentication>=1.6.0
+mitol-django-openedx>=1.3.0
+mitol-django-payment-gateway>=1.8.0
+mitol-django-google-sheets>=2.6.0
+mitol-django-google-sheets-refunds>=0.8.0
 newrelic
 pyOpenSSL
 psycopg2
