--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ amqp==5.0.9
     # via kombu
 anyascii==0.2.0
     # via wagtail
+appnope==0.1.3
+    # via ipython
 asgiref==3.3.4
     # via
     #   django
@@ -49,7 +51,7 @@ certifi==2021.5.30
     #   sentry-sdk
 cffi==1.14.5
     # via cryptography
-chardet==4.0.0
+charset-normalizer==3.1.0
     # via requests
 click==8.0.1
     # via
@@ -390,7 +392,7 @@ redis==3.5.3
     #   -r requirements.in
     #   celery-redbeat
     #   django-redis
-requests==2.25.1
+requests==2.28.2
     # via
     #   -r requirements.in
     #   coreapi
