--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ certifi==2021.5.30
     #   sentry-sdk
 cffi==1.14.5
     # via cryptography
-chardet==4.0.0
+charset-normalizer==3.1.0
     # via requests
 click==8.0.1
     # via
@@ -392,7 +392,7 @@ redis==3.5.3
     #   -r requirements.in
     #   celery-redbeat
     #   django-redis
-requests==2.25.1
+requests==2.28.2
     # via
     #   -r requirements.in
     #   coreapi
