--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ defusedxml==0.7.1
     # via
     #   python3-openid
     #   social-auth-core
+    #   willow
 deprecated==1.2.13
     # via jwcrypto
 dj-database-url==0.5.0
@@ -218,6 +219,8 @@ factory-boy==3.2.0
     #   mitol-django-hubspot-api
 faker==8.8.2
     # via factory-boy
+filetype==1.2.0
+    # via willow
 google-api-python-client==1.7.11
     # via
     #   mitol-django-google-sheets
@@ -310,8 +313,8 @@ oauthlib==3.2.2
     #   django-oauth-toolkit
     #   requests-oauthlib
     #   social-auth-core
-openpyxl==3.0.7
-    # via tablib
+openpyxl==3.1.2
+    # via wagtail
 packaging==20.9
     # via pytest
 parso==0.8.2
@@ -448,8 +451,6 @@ sqlparse==0.4.4
     # via django
 stevedore==3.5.0
     # via edx-opaque-keys
-tablib[xls,xlsx]==3.0.0
-    # via wagtail
 telepath==0.2
     # via wagtail
 tenacity==7.0.0
@@ -493,7 +494,7 @@ vine==5.0.0
     #   amqp
     #   celery
     #   kombu
-wagtail==4.0
+wagtail==5.0
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
@@ -501,16 +502,10 @@ webencodings==0.5.1
     # via
     #   bleach
     #   html5lib
-willow==1.4
+willow==1.5
     # via wagtail
 wrapt==1.12.1
     # via deprecated
-xlrd==2.0.1
-    # via tablib
-xlsxwriter==1.4.4
-    # via wagtail
-xlwt==1.3.0
-    # via tablib
 zope-interface==5.4.0
     # via datetime
 
